# E2EMessaging

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  README.md  config.json  docker-compose.yml  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
models/: Devices.cc  Devices.h  Messages.cc  Messages.h  OneTimePrekeys.cc  OneTimePrekeys.h  SignedPrekeys.cc  SignedPrekeys.h  Users.cc  Users.h  model.json
sql_models/: devices.sql  messages.sql  migration.sql  user.sql
src/: main.cpp
src/controllers/: AuthController.cc  AuthController.h  DeviceController.cc  DeviceController.h
